--- a/Tech_Challenge_1.ipynb
+++ b/Tech_Challenge_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZmpJqH4hrvoBOiFM+/7qR",
+      "authorship_tag": "ABX9TyNlVo1QmhOjI3iZRe6MkUam",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1735,12 +1735,124 @@
         "<br>\n",
         "Padronizar e normalizar os dados. PCA\n",
         "\n",
+        "<br>\n",
+        "transformar dados categóricos em colunas, por ex sexo (usar LabelEncoder)\n",
+        "O labelencoder, diferentemente do onehotencoder (vimos em regressão linear multipla), é que não extender a dimensão de dados (aumentando colunas).\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "kl-KW8ZexTI9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "label_encoder = LabelEncoder()\n",
+        "\n",
+        "# Ajustar e transformar os rótulos\n",
+        "df['col1'] = label_encoder.fit_transform(df['col1'])\n",
+        "df['col2'] = label_encoder.fit_transform(df['col2'])\n",
+        "df['col3'] = label_encoder.fit_transform(df['col3'])\n",
+        "\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "-4Xekm2C6Utn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelagem:\n",
+        "* Crie um modelo preditivo de regressão utilizando uma técnica à sua escolha (por exemplo, Regressão Linear, Árvores de Decisão etc).\n",
+        "* Divida o conjunto de dados em conjuntos de treinamento e teste.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Igp4f51d7R7u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# antes de normalizar o padronizar, vamos separar os dados em treino e teste:\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X = df.drop(columns=['abc']) # variaveis caracteristicas\n",
+        "y = df['abc'] #o que eu quero prever (target).\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ],
+      "metadata": {
+        "id": "Euyvq6-38Bxg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Feature Scaling**\n",
+        "\n",
+        "Aplicar técnicas de normalização e padronização em base de dados com Sci-Learn.\n",
+        "\n",
+        "Normalização: minmaxscaler = 0 a 1\n",
+        "\n",
+        "Padronização: standardscaler (z-score) trabalha com desv padrão e média\n",
+        "\n",
+        "usa um ou outro?\n"
+      ],
+      "metadata": {
+        "id": "Kku1vDJ_8hMG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "scaler.fit(X_train)\n",
+        "\n",
+        "xtrain_min_max_scaled = scaler.transform(X_train)\n",
+        "xtest_min_max_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "xtrain_min_max_scaled"
+      ],
+      "metadata": {
+        "id": "cS-7nJUx9Nu_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# o Standscaler utiliza o z-score, é mais sensivel a outliers\n",
+        "scaler = StandScaler()\n",
+        "\n",
+        "scaler.fit(X_train)\n",
+        "\n",
+        "x_train_standard_scaled = scaler.transform(X_train)\n",
+        "x_test_standard_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "# olhar o codigo do github de machinelearning que tem os testes da normalização e padronizacao"
+      ],
+      "metadata": {
+        "id": "9UehCnSG9yPA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
